# AI_RAG_ENGINE

./: .env.example  .gitignore  README.md  pyproject.toml
api/: __init__.py  app.py  dependencies.py  errors.py  middleware.py  schemas.py  services.py
api/routers/: documents.py  health.py  metrics.py  query.py
configs/: settings.py
docker/: Dockerfile  docker-compose.yml  frontend.Dockerfile
docs/: architecture.md  deploy-online.md  deployment.md  diagrams.md  evaluation.md  v2-study-assistant-plan.md
evaluation/: __init__.py  base.py  citation_eval.py  comparison.py  dataset.py  generation_evaluator.py  offline.py  report.py  retrieval_evaluator.py  runner.py
evaluation/datasets/: corpus.json  golden.json
evaluation/judges/: __init__.py  base.py  factory.py  fallback.py  lexical_judge.py  llm_judge.py
evaluation/metrics/: __init__.py  generation.py  retrieval.py
frontend/: app.py
generation/: __init__.py  base.py  citations.py  extractive.py  gate.py  generator.py  prompt.py
generation/llm/: __init__.py  anthropic_client.py  base.py  factory.py  ollama_client.py  openai_client.py
ingestion/: __init__.py  base.py  pipeline.py  segment.py
ingestion/chunkers/: __init__.py  common.py  fixed.py  recursive.py  semantic.py
models/: __init__.py  domain.py
reranking/: __init__.py  base.py  cross_encoder.py  lexical.py
retrieval/: __init__.py  access.py  base.py  cached.py  fusion.py  multi_query.py
scripts/: .gitkeep  __init__.py  bootstrap_demo.py  evaluate.py  ingest.py
services/: __init__.py  answer_service.py
storage/: __init__.py  base.py  memory_store.py  qdrant_store.py
tests/: conftest.py  fakes.py
utils/: __init__.py  logging.py  metrics.py  tokenizer.py  tracing.py
web/: .env.example  README.md  index.html  package.json  tailwind.config.js
web/src/: App.jsx  (+2 more)
(+62 files in other folders)
