[project]
name = "rag-engine"
version = "0.1.0"
description = "Production-grade hybrid RAG engine for internal knowledge search: dense + sparse retrieval, RRF fusion, cross-encoder reranking, grounded generation with citations, and evaluation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lucas" }]

dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "qdrant-client>=1.9",
    "sentence-transformers>=3.0",
    "rank-bm25>=0.2.2",
    "httpx>=0.27",
    "structlog>=24.1",
    "tiktoken>=0.7",
    "redis>=5.0",
]

[project.optional-dependencies]
ingestion = [
    "pypdf>=4.2",
    "markdown-it-py>=3.0",
    "beautifulsoup4>=4.12",
]
eval = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "api", "ingestion", "retrieval", "reranking", "generation",
    "evaluation", "storage", "services", "configs", "models", "utils",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "integration: tests requiring a live Qdrant (skipped when unreachable)",
]
